# pycsgogpt

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
pycsgogpt/: __main__.py  csgo_chatbot.py
